bugFixCross